# cpu_assembler_disassembler

./: .gitignore  CMakeLists.txt  README.md  disasm.txt  disasmJump.txt  disasmRegs.txt  doxygen_log.txt  main.c  masm  masmJump  masmRegs  testJmp.txt  testRegs.txt
docs/html/: all__possible__stack_8h.html  all__possible__stack_8h__dep__incl.dot  all__possible__stack_8h__dep__incl.md5  all__possible__stack_8h__incl.dot  all__possible__stack_8h__incl.md5  all__possible__stack_8h_source.html  annotated.html  asm_8c.html  asm_8c__incl.dot  asm_8c__incl.md5  asm_8h.html  asm_8h__dep__incl.dot  asm_8h__dep__incl.md5  asm_8h__incl.dot  asm_8h__incl.md5  asm_8h_source.html  asm__ram_8c.html  asm__ram_8c__incl.dot  asm__ram_8c__incl.md5  asm__ram_8h.html  asm__ram_8h__dep__incl.dot  asm__ram_8h__dep__incl.md5  asm__ram_8h__incl.dot  asm__ram_8h__incl.md5  asm__ram_8h_source.html  asm__utils_8c.html  asm__utils_8c__incl.dot  asm__utils_8c__incl.md5  asm__utils_8h.html  asm__utils_8h__dep__incl.dot  asm__utils_8h__dep__incl.md5  asm__utils_8h__incl.dot  asm__utils_8h__incl.md5  asm__utils_8h_source.html  classes.html  cpu_8c.html  cpu_8c__incl.dot  cpu_8c__incl.md5  cpu_8h.html  cpu_8h__dep__incl.dot  (+81 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  (+9 more)
src/: asm.c  asm.h  asm.vexe  asm_ram.c  asm_ram.h  asm_utils.c  asm_utils.h  cpu.c  cpu.h  disasm.c  disasm.h  disasm.txt  test.vara  vector.c  vector.h
src/stack_lib/: all_possible_stack.h  stack.h  stack_errors.c  stack_errors.h  templates.h
test/: disasmCall.txt  disasmInfLoop.txt  disasmJe.txt  disasmJne.txt  disasmMov.txt  disasmPRAM.txt  disasmSwap.txt  fact.txt  ifElse.txt  masmCall  masmInfLoop  masmJe  masmJne  masmMov  masmPRAM  masmSwap  testCall.txt  testInfinityLoop.txt  testJe.txt  testJne.txt  testMov.txt  testPushRAM.txt  testRegs.txt  testSwap.txt  test_assembler.c  tests.c  whileSum.txt
